# hft-demo

./: .gitignore  Cargo.toml  README.md  config.toml  run.sh
feed_handler/: Cargo.toml
feed_handler/src/: main.rs
hft-types/: Cargo.toml
hft-types/benches/: latency_bench.rs
hft-types/src/: lib.rs  messaging.rs  orderbook.rs  replay.rs  strategies.rs
hft-types/tests/: integration_test.rs
infra/: docker-compose.yml  prometheus.yml
infra/grafana/provisioning/dashboards/: dashboard.yml  hft-dashboard.json
market_simulator/: Cargo.toml
market_simulator/src/: main.rs
order_gateway/: Cargo.toml
order_gateway/src/: main.rs
strategy_engine/: Cargo.toml
strategy_engine/src/: main.rs
telemetry/: Cargo.toml
telemetry/src/: main.rs
web-ui/: package-lock.json  package.json
web-ui/src/app/: layout.tsx  page.tsx
