[workspace]
resolver = "2"
members = [
    "hft-types",
    "market_simulator",
    "feed_handler",
    "strategy_engine",
    "order_gateway",
    "telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HFT Demo Team"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.5"
config = "0.14"
hft-types = { path = "hft-types" }
